Correctly handle file uploads.

--- a/config.ini
+++ b/config.ini
@@ -20,4 +20,4 @@ lockout_time_window=30 # Account lockout time (in minutes).
 #log_file_prefix="morpheus.log"
 
 # Response options.
-compress_response=True
+compress_response=False
